# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Added 
  explicit check for missing files directory, rather then ignoring it.
  Also added an explicit commit-time check for CVS/Entries being sane.
  (#57141).

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: reworked 
  the qacats definition so that the type of bug that borked emerge help is 
  no longer possible.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
  bin/emerge: Corrected emerge --fetch-all-uri issues, now works.  Basically,
  FEATURES="cvs" emerge -f blar == emerge --fetch-all-uri blar.  The fetch
  option handling in emerge could use some cleanup.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Ongoing 
  cleanup in emerge -fp; this corrects a minor naggle affecting previous 
  releases, where emerge -fp would still attempt to do md5 checks on files.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Corrected 
  logic for fetch(..., ..., use_locks=1,listonly=1) attempting to use locks, 
  when fetch is just printing the src_uri's.  (#59394).

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected the
  borkage I introduced into repoman's help option- it was throwing a traceback
  due to file.executable's key name being typoed.

  03 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_dep.py: Enhanced
	the invalid depend string identification for || (and &&) strings.

*portage-2.0.51_pre15 (03 Aug 2003): Fixes and Public Readiness

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected 